[gd_scene load_steps=2 format=3 uid="uid://b36sxkamr4wcl"]

[ext_resource type="Script" path="res://mainMenu.gd" id="1_jq252"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1148.0
offset_bottom = 648.0
script = ExtResource("1_jq252")

[node name="fiberOpticalPower" type="Control" parent="."]
anchors_preset = 0
offset_right = 324.0
offset_bottom = 153.0

[node name="RichTextLabel" type="RichTextLabel" parent="fiberOpticalPower"]
layout_mode = 0
offset_left = 17.0
offset_top = 16.0
offset_right = 319.0
offset_bottom = 56.0
theme_override_font_sizes/normal_font_size = 24
text = "Fiber Optical Power"

[node name="RichTextLabel2" type="RichTextLabel" parent="fiberOpticalPower"]
layout_mode = 0
offset_left = 27.0
offset_top = 61.0
offset_right = 76.0
offset_bottom = 101.0
text = "From:"

[node name="RichTextLabel4" type="RichTextLabel" parent="fiberOpticalPower"]
layout_mode = 0
offset_left = 179.0
offset_top = 62.0
offset_right = 228.0
offset_bottom = 102.0
text = "mW"

[node name="RichTextLabel5" type="RichTextLabel" parent="fiberOpticalPower"]
layout_mode = 0
offset_left = 181.0
offset_top = 100.0
offset_right = 230.0
offset_bottom = 140.0
text = "mW"

[node name="RichTextLabel3" type="RichTextLabel" parent="fiberOpticalPower"]
layout_mode = 0
offset_left = 46.0
offset_top = 98.0
offset_right = 86.0
offset_bottom = 124.0
text = "To:"

[node name="LineEdit" type="LineEdit" parent="fiberOpticalPower"]
layout_mode = 0
offset_left = 81.0
offset_top = 61.0
offset_right = 148.063
offset_bottom = 92.0
placeholder_text = "1"
expand_to_text_length = true

[node name="LineEdit2" type="LineEdit" parent="fiberOpticalPower"]
layout_mode = 0
offset_left = 81.0
offset_top = 97.0
offset_right = 174.0
offset_bottom = 128.0
placeholder_text = "100"
expand_to_text_length = true

[node name="optogeneticProtein" type="Control" parent="."]
anchors_preset = 0
offset_left = 286.0
offset_top = 17.0
offset_right = 541.0
offset_bottom = 136.0

[node name="OptionButton" type="OptionButton" parent="optogeneticProtein"]
layout_mode = 0
offset_left = 23.0
offset_top = 50.0
offset_right = 182.0
offset_bottom = 81.0
item_count = 6
popup/item_0/text = "ChR2"
popup/item_0/id = 0
popup/item_1/text = "ChR2_R"
popup/item_1/id = 1
popup/item_2/text = "ChETA_A"
popup/item_2/id = 2
popup/item_3/text = "TC"
popup/item_3/id = 3
popup/item_4/text = "ChETA_TC"
popup/item_4/id = 4
popup/item_5/text = "CatCh"
popup/item_5/id = 5

[node name="RichTextLabel" type="RichTextLabel" parent="optogeneticProtein"]
layout_mode = 0
offset_left = 2.0
offset_right = 262.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 24
text = "Optogenetic Protein"

[node name="viewPlot" type="Button" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 579.0
offset_right = 160.0
offset_bottom = 618.0
text = "View Plot"

[node name="slopeIntercept" type="Control" parent="."]
anchors_preset = 0
offset_left = 759.0
offset_right = 1151.0
offset_bottom = 215.0

[node name="slope" type="LineEdit" parent="slopeIntercept"]
layout_mode = 0
offset_left = 59.0
offset_top = 74.0
offset_right = 126.063
offset_bottom = 105.0

[node name="RichTextLabel" type="RichTextLabel" parent="slopeIntercept/slope"]
layout_mode = 0
offset_top = -28.0
offset_right = 55.0
text = "Slope"

[node name="intercept" type="LineEdit" parent="slopeIntercept"]
layout_mode = 0
offset_left = 177.0
offset_top = 74.0
offset_right = 244.063
offset_bottom = 105.0

[node name="RichTextLabel" type="RichTextLabel" parent="slopeIntercept/intercept"]
layout_mode = 0
offset_top = -28.0
offset_right = 80.0
offset_bottom = -3.0
text = "Intercept"

[node name="slopeInterceptLabel" type="RichTextLabel" parent="slopeIntercept"]
layout_mode = 0
offset_right = 298.0
offset_bottom = 40.0
text = "Testing: slope and intercept input"

[connection signal="text_changed" from="fiberOpticalPower/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="fiberOpticalPower/LineEdit2" to="." method="_on_line_edit_2_text_changed"]
[connection signal="pressed" from="viewPlot" to="." method="_on_button_pressed"]
[connection signal="text_changed" from="slopeIntercept/slope" to="." method="_on_slope_text_changed"]
[connection signal="text_changed" from="slopeIntercept/intercept" to="." method="_on_intercept_text_changed"]
